--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.6.1",
     "express": "^4.15.5",
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.2",
@@ -22,7 +23,7 @@
     "mongoose": "^4.11.13",
     "morgan": "^1.9.0",
     "node-mailer": "^0.1.1",
-    "nodemailer": "^4.6.7",
+    "nodemailer": "^4.6.8",
     "pino": "^4.17.6",
     "redis": "^2.8.0",
     "request": "^2.83.0",
